syntax = "proto3";

option csharp_namespace = "CacheService";

package cache;

// The greeting service definition.
service Cacher {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetClientInfo (ClientInfoRequest) returns (ClientInfoReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message ClientInfoRequest {
  string id = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message AlertRule {
  int32 waitingSeconds = 1;
  int32 alertIntervalSeconds = 2;
  int64 chatId = 3;
}

message ClientData {
	string id = 1;
	string name = 2;
}

message StateData {
	string lastActive = 1;
	string lastAlerted = 2;
}

message ClientInfoReply {
	repeated AlertRule alertRules = 1;
	ClientData clientData = 2;
	StateData stateData = 3;
}
