syntax = "proto3";

option csharp_namespace = "CacherServiceClient";

package cache;

// The greeting service definition.
service Cacher {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetClientAlertRuleInfo (ClientRequest) returns (AlertRuleReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message ClientRequest {
  string id = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message AlertRule {
  string clientId = 1;
  int32 waitingSeconds = 2;
  int32 alertIntervalSeconds = 3;
  int64 chatId = 4;
}

message AlertRuleReply {
	repeated AlertRule alertRules = 1;
}
